corrected the link to the slides

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ img {
 </div>
 <div id="afternoon" class="section level2">
 <h2><span class="header-section-number">1.2</span> Afternoon</h2>
-<p><a href="https://geoscripting-wur.github.io/Intro2Linux/slides.html">Discussion session and feedback</a></p>
+<p><a href="https://geoscripting-wur.github.io/Intro2Linux/Slides.html">Discussion session and feedback</a></p>
 </div>
 </div>
 <div id="todays-learning-objectives" class="section level1">
