project planning info added

--- a/Slides.html
+++ b/Slides.html
@@ -74,6 +74,18 @@ Jan Verbesselt
 </ul></li>
 </ul>
 </div>
+<div id="project-planning" class="slide section level2">
+<h1>Project planning</h1>
+<ul>
+<li>Make up a planning what you want to do each day</li>
+<li>Try to finish the major part before Thurday so that you have thursday to
+<ul>
+<li>improve your script</li>
+<li>focus on reproducability</li>
+<li>visualise results using a script</li>
+</ul></li>
+</ul>
+</div>
 <div id="good-book-regarding-todays-lesson" class="slide section level2">
 <h1>Good book regarding todays lesson</h1>
 <p>Check out Springer books via the WUR library</p>
