data and links added

--- a/Slides.html
+++ b/Slides.html
@@ -84,11 +84,22 @@ Jan Verbesselt
 <li>focus on reproducability</li>
 <li>visualise results using a script</li>
 </ul></li>
+<li>Do not store data sets on GitHub (size limit of 50Mb)
+<ul>
+<li>use Dropbox or download scripts.</li>
+</ul></li>
 </ul>
 </div>
-<div id="good-book-regarding-todays-lesson" class="slide section level2">
-<h1>Good book regarding todays lesson</h1>
-<p>Check out Springer books via the WUR library</p>
+<div id="other-nice-things" class="slide section level2">
+<h1>Other nice things</h1>
+<ul>
+<li>Check out Springer books via the WUR library</li>
+<li><a href="http://foss4geo.org/" class="uri">http://foss4geo.org/</a></li>
+<li>Meeting at the end of the month;
+<ul>
+<li><a href="http://www.osgeo.org/node/1464" class="uri">http://www.osgeo.org/node/1464</a></li>
+</ul></li>
+</ul>
 </div>
 
   <!-- dynamically load mathjax for compatibility with self-contained -->
