--- a/index.html
+++ b/index.html
@@ -356,10 +356,11 @@ gdalinfo -hist -stats ndvi.tif</code></pre>
 </div>
 <div id="excercise" class="section level2">
 <h2><span class="header-section-number">3.8</span> Excercise</h2>
+<p>Let’s download a file from <a href="https://geoscripting-wur.github.io/IntroToRaster/#raster-objects-manipulations">Lesson 4 and Raster object manipulations</a>. Download the <code>gewata.zip</code> file from Github (<a href="https://github.com/GeoScripting-WUR/IntroToRaster/raw/gh-pages/data/gewata.zip">link</a>) and unzip in the data folder.</p>
 <p>Write a shell script that:</p>
 <ul>
-<li>resampels the Landsat data to pixels of 60 m</li>
-<li>reprojects the landsat data to WGS Lat/long</li>
+<li>derives NDVI from the landsat *.tif file as NDVI.tif</li>
+<li>resampels the NDVI tif file to pixels of 60 m and reprojects it to WGS Lat/long</li>
 <li>convert the <em>.tif file (i.e. a geotif) to </em>.png</li>
 </ul>
 <p>Copy the text of your shell script in an e-mail per team and set it to me before friday (1030u). Do not forget to add a teamname and date at the top of your script.</p>
