self-study feedback

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@ img {
 <div id="planning" class="section level1">
 <h1><span class="header-section-number">1</span> Planning</h1>
 <p>Good morning! Here is what you will do today:</p>
+<p>** important ** : post the answers within the self-study in the script review center!</p>
 <table>
 <thead>
 <tr class="header">
