Minor changes Fix broken urls, text reformatting, folder > directory

--- a/sufsara_tutorial.html
+++ b/sufsara_tutorial.html
@@ -1027,18 +1027,19 @@ a:visited {color: #91170a;}
 with SURFsara cloud (in-browser)</h1>
 <p>First go to <a
 href="https://portal.live.surfresearchcloud.nl/">https://portal.live.surfresearchcloud.nl/</a>
-and log in using your WUR account. Use this link <a href="TODO">TODO</a>
-to ask for access to the <em>Wageningen University Geoscripting</em>
-collaboration. We (the staff) have to accept access to this
-collaboration, and create a virtual machine (VM) for your group. In the
-meantime, you can set up your two factor authentication:</p>
+and log in using your WUR account. Use <a
+href="https://sram.surf.nl/registration?collaboration=4873a9a3-15b8-4e10-9dde-a07262a3bdb6">this
+link</a> to request access to the <em>Wageningen University
+Geoscripting</em> collaboration. We (the staff) have to accept access to
+this collaboration, and create a virtual machine (VM) for your group. In
+the meantime, you can set up your two factor authentication:</p>
 <h2 id="two-factor-authentication-2fa">Two factor authentication
 (2FA)</h2>
 <p>Navigate to your <a
 href="https://portal.live.surfresearchcloud.nl/profile">profile
 page</a>. Click the <strong>Profile options</strong> button, and then on
 <strong>Reset Time based password</strong>. You should get the following
-message: “Are you sure you want to reset your password?”. Press
+message: <em>“Are you sure you want to reset your password?”</em>. Press
 <strong>Reset</strong>. Follow the instructions to set up 2FA. You will
 need the 2FA code later for logging into the VM.</p>
 <h2 id="accessing-the-vm">Accessing the VM</h2>
@@ -1053,18 +1054,23 @@ name/number does not exist, please contact the staff.</p>
 <p>At the right of every workspace, there should be a (yellow) button
 that allows access to the workspace. Press that button for the workspace
 you want to access. A login-page will show up. Enter the following
-information: - Use the standard Session type (Xorg) - Your username is
-your SURF researchcloud username, which is not the same as your WUR
-username (!). You can find your SURF username in your <a
-href="https://portal.live.surfresearchcloud.nl/profile">profile page</a>
-- Your password is the 2FA code</p>
+information:</p>
+<ul>
+<li>Use the standard Session type (Xorg)</li>
+<li>Your username is your SURF researchcloud username, which is not the
+same as your WUR username (!). You can find your SURF username in your
+<a href="https://portal.live.surfresearchcloud.nl/profile">profile
+page</a></li>
+<li>Your password is the 2FA code</li>
+</ul>
 <p>If your VM is coming out of ‘sleep mode’, and you have to fill in a
 password to unlock it, you should (again) make use of your 2FA code.
 Happy coding!</p>
 <h1 id="optional-accessing-the-vm-from-your-own-machine">Optional:
 accessing the VM from your own machine</h1>
 <p>The tutorial above allows you to access the VM in-browser. There are
-however alternatives, for which we provide a tutorial below.</p>
+however alternatives to access the VM directly from your own machine,
+for which we provide a tutorial below.</p>
 <h2 id="enrol-your-ssh-key">Enrol your SSH key</h2>
 <p>Navigate to your <a href="https://sram.surf.nl/profile">SRAM profile
 page</a>. Generate an SSH key on your own machine. Paste this SSH key
