--- a/index.html
+++ b/index.html
@@ -1135,7 +1135,7 @@ let’s try something simple. Type <code>date</code>.</p>
 <button class="output bash toggle btn btn-xs btn-success">
 <span class="glyphicon glyphicon-chevron-down"></span> bash output
 </button>
-<pre style=""><code class="output bash">## Mon Nov 28 15:47:40 UTC 2022
+<pre style=""><code class="output bash">## Tue Nov 29 10:02:57 UTC 2022
 </code></pre>
 </div>
 <p>There you go. Why bother looking at your built-in calendar in the
@@ -1155,7 +1155,7 @@ free memory.</p>
 <span class="glyphicon glyphicon-chevron-down"></span> bash output
 </button>
 <pre style=""><code class="output bash">##               total        used        free      shared  buff/cache   available
-## Mem:       16393460     2574780     2222520       88428    11596160    13395032
+## Mem:       16393460     2201252     2605848       91772    11586360    13765216
 ## Swap:             0           0           0
 </code></pre>
 </div>
@@ -1663,19 +1663,13 @@ questions about some commands.
 </p>
 </div>
 </div>
-<<<<<<< HEAD
-<h2 id="package-installation-and-management">Package installation and management</h2>
-<p>One of the greatest advantages of Linux distributions over other OSs is the package manager. Even if you never used Linux before, you are probably already using a package manager on your mobile device: The App Store, Google Play Store and Windows Store are all package managers, modeled after the Linux ones. A package manager is a central system for downloading, installing and removing software.</p>
-<p>Each major Linux distribution has its own package manager, which is aware of all packages maintained by the distribution. These packages are tested and are known to work with that particular distribution version, so the package manager is the first place to look for installing additional software. The package manager is typically a command-line program, although some distributions also have GUI interfaces for it.</p>
-<p>Ubuntu uses <em>Aptitude</em> as the package manager. Here is a short list of the most useful package manager commands on Ubuntu:</p>
-=======
 <h2 id="package-installation-and-management">Package installation and
 management</h2>
 <p>One of the greatest advantages of Linux distributions over other OSs
 is the package manager. Even if you never used Linux before, you are
 probably already using a package manager on your mobile device: The App
 Store, Google Play Store and Windows Store are all package managers,
-modeled after the Linux ones. A package manager is a central system for
+modelled after the Linux ones. A package manager is a central system for
 downloading, installing and removing software.</p>
 <p>Each major Linux distribution has its own package manager, which is
 aware of all packages maintained by the distribution. These packages are
@@ -1686,7 +1680,6 @@ program, although some distributions also have GUI interfaces for
 it.</p>
 <p>Ubuntu uses <em>Aptitude</em> as the package manager. Here is a short
 list of the most useful package manager commands on Ubuntu:</p>
->>>>>>> a28b9f9a187cd0a59513cf89c3bf3255cbaf11dc
 <ul>
 <li><code>apt search packagename</code>: Search for a package called
 “packagename”.</li>
